src/scss/botchat.scss
/* ... */
    .wc-message-imBack {
      margin-left: auto;
    }

    .wc-message-handoff {
      margin-left: auto;
    }

    .wc-message-disclaimer {
        width: $gideon-node-width;
        margin-left: auto;
    }

    // Stuff for full screen that isn't working yet -TO 5/13
    // .file-upload-title {
    //     background-color: none !important;
    //     font-size: 14px;
    //     // font-weight: bold;
    //     max-width: 250px;
    //     text-align: center;
    //     color: #262626;
    //     padding: 17px 5px 20px;
    //     border-top: 5px solid #3F6DE1;
    //     border-radius: 3px 0px 0px 0px;
    //     // border-top-left-radius: 13px; 
    // }
      
    // .file-upload-title + div {
    //     border: 1px dashed #3F6DE1 !important;
    //     margin: 14px;
    //     display: flex;
    //     align-items: center;
    //     justify-content: center; 
    // }

    // .drop-text {
    //     color: #3F6DE1;
    //     text-align: center;
    //     width: 200px;
    //     word-wrap: break-word; 
    // }   
    
    // .bold-line {
    //     font-weight: 600; 
    // }
      
    // .upload-skip {
    //     color: #3F6DE1;
    //     text-align: center;
    //     padding: 14px 0px;
    //     border-top: 1px solid #3F6DE1;
    //     cursor: pointer;
    //     font-weight: 600; 
    // }
/* console */



    .wc-console {
        bottom: 0;
        box-sizing: border-box;
        background: white;
        height: $consoleHeight;
        max-width: $chatWidth;
        left: 0;
        // width: 66%;
        position: absolute;
        right: 0;
        transition: background-color .4s;

        @include mobileAndTablet {
            max-width: $chatWidthMobile;
        }


        .wc-border {
          display: block;
          height: 1px;
          width: 100%;
          background-color: #E5E5E5;
          background-position: 0%;
          background-size: 300%;
          transition: background-position .4s;
        }

        &::after {
          content: "";
          display: block;
          clear: both;
        }

        &__disabled {
            background-color: #eff0f1;
            @include mobileAndTablet {
                display: none;
            }
        }  

        &__disabled::before {
          background-position: 100%;
        }

        > .wc-upload,
        > .wc-textbox,
        > .wc-send,
        > .wc-mic {
            position: absolute;
            vertical-align: middle;
        }

        label, button {
            cursor: pointer;
            display: inline-block;
            outline:0;
        }

        svg {
            fill: #3f6de1;
            margin-right: 16px;
        }

        input[type=text],
        textarea {
            border: none;
            color: #000 !important;
            height: 55px;
            outline: none;
            padding: 0;
            resize: none;
            width: 100%;
            padding-top:11.5px;
            padding-bottom: 12px;
            letter-spacing: 0.4px;
            /* making input font size 16 rather than 15 should prevent
            safari iOS from auto zooming onto text field,
            and thus should solve other sizing issues.  */
            @include mobileAndTablet {
              font-size: 16px;
            }
        }


        ::-webkit-input-placeholder {color: #979999; opacity: 1;}
        :-moz-placeholder           {color: #979999; opacity: 1;}
        ::-moz-placeholder          {color: #979999; opacity: 1;}
        :-ms-input-placeholder      {color: #979999; opacity: 1;}


        &.has-text .wc-send svg {
            fill: #3F6DE1;
        }

        .wc-upload {
            cursor: pointer;
            position: relative;

            svg {
                height: 18px;
                width: 26px;
            }
        }

        .wc-upload-background {
            position: center;
            box-sizing: border-box;
            width: 387px;
            height: 181px;
            background: #F7F7F7;
            border: 1.5px dashed #EBEBEB;
            border-radius: 5px;
        }

        #wc-upload-input {
            font-size: 0;
            height: 0;
            left: 0;
            opacity: 0;
            outline: 0;
            position: absolute;
            top: 0;
            width: 0;
        }

        .wc-send {
            right: 0;
            top: 20px;
        }

        .wc-send.hidden {
            visibility: hidden;
        }

        &.has-upload-button .wc-textbox {
            left: 48px;
        }

        .wc-textbox {
            bottom: 0;
            left: 20px;
            right: 76px;
            top: 20px;


            input {
                background-color: #F7F7F7;
                padding-left: 12px;
            }
        }

        .chat-signature {
          background-color: pink;
          text-align: center;
          top: 0;
          left: 31px;
        }


        .wc-mic,
        .wc-send {
            background-color: transparent;
            border: 0;
            padding: 0;
            right: 0;

            &.hidden {
                visibility: hidden;
            }
        }

        .wc-send {
            svg {
                width: 55px;
            }
        }

        .wc-mic {
            &.active path#micFilling {
                fill:rgb(78, 55, 135)
            }

            &.inactive path#micFilling {
                visibility: hidden;
            }
        }
    }

    .wc-console-fullscreen {
        max-width: 100%;
    }

    .wc-console .wc-send svg .sendArrow {
        fill: white;
    }
/* ... */

